--- a/src/style.css
+++ b/src/style.css
@@ -10,6 +10,11 @@ h1 {
 ul {
   list-style: none;
 }
+
+li {
+  text-transform: capitalize;
+}
+
 .weather-app-wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -44,7 +49,7 @@ ul {
   padding: 0;
 }
 
-#temp-numb {
+#temperature {
   color: rgb(32, 33, 36);
   display: inline;
   font-family: "Open Sans", sans-serif;
