--- a/src/style.css
+++ b/src/style.css
@@ -21,6 +21,41 @@ small {
   font-size: 8px;
 }
 
+.weather-forecast h3 {
+  box-sizing: border-box;
+  color: rgb(186, 186, 186);
+  font-family: arial, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  height: 15px;
+  line-height: 15px;
+  margin-bottom: 8px;
+  margin-top: 0px;
+  padding-top: 7px;
+  text-align: center;
+}
+
+.weather-forecast-temperature {
+  text-align: center;
+  color: rgb(135, 135, 135);
+  font-size: 13px;
+  font-weight: 400;
+  height: auto;
+  line-height: 15px;
+  white-space: nowrap;
+}
+
+.weather-forecast img {
+  display: block;
+  margin: 0 auto;
+  height: 48px;
+  width: 48px;
+}
+
+.weather-forecast {
+  margin-top: 40px;
+}
+
 .form-style {
   padding: 0 2px;
 }
