--- a/src/style.css
+++ b/src/style.css
@@ -22,10 +22,11 @@ small {
 }
 
 .weather-forecast h3 {
-  box-sizing: border-box;
-  color: rgb(186, 186, 186);
   font-family: arial, sans-serif;
-  font-size: 14px;
+  box-sizing: border-box;
+  color: rgb(112, 117, 122);
+  font-family: arial, sans-serif;
+  font-size: 12px;
   font-weight: 400;
   height: 15px;
   line-height: 15px;
@@ -37,7 +38,8 @@ small {
 
 .weather-forecast-temperature {
   text-align: center;
-  color: rgb(135, 135, 135);
+  color: rgb(32, 33, 36);
+  font-family: "Open Sans", sans-serif;
   font-size: 13px;
   font-weight: 400;
   height: auto;
